--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <ul class="list header-list">
             <li class="header-li-1">
-              <a href="./index.html" class="header-list-item1 link-deco"
+              <a href="./index.html" class="header-list-item1 link-deco active"
                 >Studio</a
               >
             </li>
