--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,9 @@
               >
             </li>
             <li class="header-li-2">
-              <a href="./portfolio.html" class="header-list-item2 link-deco"
+              <a
+                href="./portfolio.html"
+                class="header-list-item2 link-deco active"
                 >Portfolio</a
               >
             </li>
@@ -90,12 +92,19 @@
 
           <ul class="list foto-section">
             <li class="foto-item">
-              <img
-                src="./images/banking-min.jpg"
-                alt="banking"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/banking-min.jpg"
+                  alt="banking"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="team-text-box foto-border">
                 <h3 class="foto-section-h3">Banking App Interface Concept</h3>
                 <p class="foto-section-text">App</p>
