right overley 1 done!

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,11 +99,13 @@
                   width="360"
                   height="300"
                 />
-                <p class="overlay-description">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
+                <div class="overlay-description">
+                  <p class="decsription-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
               </div>
               <div class="team-text-box foto-border">
                 <h3 class="foto-section-h3">Banking App Interface Concept</h3>
