--- a/index.html
+++ b/index.html
@@ -68,7 +68,18 @@
       <section class="hero-background">
         <div class="hero-main-box container hero-back-img">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button">Order Service</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Order Service
+          </button>
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <button
+                type="button"
+                class="modal-button"
+                data-modal-close
+              ></button>
+            </div>
+          </div>
         </div>
       </section>
       <!-- /Hero section -->
@@ -477,5 +488,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
