--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
           </button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <button
-                type="button"
-                class="modal-button"
-                data-modal-close
-              ></button>
+              <button type="button" class="modal-button" data-modal-close>
+                <img src="./images/close.svg" alt="" />
+              </button>
             </div>
           </div>
         </div>
