--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button type="button" class="modal-button" data-modal-close>
-                <img src="./images/close.svg" alt="" />
+                <svg class="close-modal-icon" width="8" height="8">
+                  <use href="./symbol-defs.svg#icon-close-icon"></use>
+                </svg>
               </button>
             </div>
           </div>
