new links to div+

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,121 +92,211 @@
 
           <ul class="list foto-section">
             <li class="foto-item">
-              <div class="overlay">
-                <img
-                  src="./images/banking-min.jpg"
-                  alt="banking"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay-description">
-                  <p class="decsription-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/banking-min.jpg"
+                    alt="banking"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Banking App Interface Concept</h3>
-                <p class="foto-section-text">App</p>
-              </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Banking App Interface Concept</h3>
+                  <p class="foto-section-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/payment-min.jpg"
-                alt="paiment"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Cashless Payment</h3>
-                <p class="foto-section-text">Marketing</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/payment-min.jpg"
+                    alt="paiment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Cashless Payment</h3>
+                  <p class="foto-section-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/app-min.jpg"
-                alt="meditaionapp"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Meditation App</h3>
-                <p class="foto-section-text">App</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/app-min.jpg"
+                    alt="meditaionapp"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Meditation App</h3>
+                  <p class="foto-section-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/taxy-min.jpg"
-                alt="taxiservice"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Taxi Service</h3>
-                <p class="foto-section-text">Marketing</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/taxy-min.jpg"
+                    alt="taxiservice"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Taxi Service</h3>
+                  <p class="foto-section-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/illustrations-min.jpg"
-                alt="illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Screen Illustrations</h3>
-                <p class="foto-section-text">Design</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/illustrations-min.jpg"
+                    alt="illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Screen Illustrations</h3>
+                  <p class="foto-section-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/courses-min.jpg"
-                alt="courses"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Online Courses</h3>
-                <p class="foto-section-text">Marketing</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/courses-min.jpg"
+                    alt="courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Online Courses</h3>
+                  <p class="foto-section-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/instagram-min.jpg"
-                alt="instastories"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Instagram Stories Concept</h3>
-                <p class="foto-section-text">Design</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/instagram-min.jpg"
+                    alt="instastories"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Instagram Stories Concept</h3>
+                  <p class="foto-section-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/food-min.jpg"
-                alt="organicfood"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Organic Food</h3>
-                <p class="foto-section-text">Web Site</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/food-min.jpg"
+                    alt="organicfood"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Organic Food</h3>
+                  <p class="foto-section-text">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="foto-item">
-              <img
-                src="./images/coffee-min.jpg"
-                alt="freshcoffee"
-                width="360"
-                height="300"
-              />
-              <div class="team-text-box foto-border">
-                <h3 class="foto-section-h3">Fresh Coffee</h3>
-                <p class="foto-section-text">Web Site</p>
-              </div>
+              <a href="" class="foto-section-link">
+                <div class="overlay">
+                  <img
+                    src="./images/coffee-min.jpg"
+                    alt="freshcoffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-description">
+                    <p class="decsription-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="team-text-box foto-border">
+                  <h3 class="foto-section-h3">Fresh Coffee</h3>
+                  <p class="foto-section-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
